--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -3,8 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./css/style.css">
-    <script src="./js/index.mjs" type="module" defer></script>
+    <link rel="stylesheet" href="../css/style.css">
+    <script src="../js/index.mjs" type="module" defer></script>
     <title>Hello World</title>
 </head>
 <body>
