--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -17,7 +17,8 @@
         <option value="WARN">WARN</option>        
         <option value="ERROR">ERROR</option>            
         <option value="FATAL">FATAL</option>            
-        <option value="CUSTOM">CUSTOM</option>            
+        <option value="CUSTOM">CUSTOM</option>
+        <option value="API">API</option>            
     </select>
 
     <div class="world_pic" id="container">
