File upload feature

--- a/app/frontend/index.html
+++ b/app/frontend/index.html
@@ -18,7 +18,7 @@
         <option value="ERROR">ERROR</option>            
         <option value="FATAL">FATAL</option>            
         <option value="CUSTOM">CUSTOM</option>
-        <option value="API">API</option>            
+        <option value="UPLOAD">**FILE UPLOAD**</option>            
     </select>
 
     <div class="world_pic" id="container">
